opsat noget html for index, lavet nogle variables og nogle mixins, forventer disse skal rettes til

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,8 @@
-@use '_partial.scss'; /*dobbelt tjek imorgen om det er korrekt*/
+@use 'partial';
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
+
