--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*Variables*/
 /*Mixins*/
-/*dobbelt tjek imorgen om det er korrekt*/
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }/*# sourceMappingURL=style.css.map */
