--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,5 +1,12 @@
-@use '_partial.scss'; /*dobbelt tjek imorgen om det er korrekt*/
+@use 'partial';
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
+.index{
+    background-color: partial.$bgcolor;
+}
+
+
