--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -6,10 +6,11 @@ $CTA: #FFA54B;
 $link1: #9EF0FF;
 $link2: #EAC9FF;
 
+
 /*Mixins*/
 @mixin body {
     background-color: $bgcolor;
-    background-image: url(../Hundepoten/img/potegang.svg);
+    background-image: url(img/potegang.svg);
     position: sticky;//test om det fungere når indholdet er kommet ind
 }
 
@@ -21,13 +22,22 @@ $link2: #EAC9FF;
     padding: 0.5rem 1rem;
 }
 
-@mixin box ($width:100vw, $height:100vh) {
-    background: rgba(50, 88, 88, 0.51);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10.5px);
-    -webkit-backdrop-filter: blur(10.5px);
-    border: 1px solid rgba(50, 88, 88, 0.2);
+@mixin box ($width:80%, $height:auto) {
     height:$height;
     width: $width;
+    margin: 3rem auto;
+    padding: 2rem;
+    color: $white;
+    background: rgba(50, 88, 88, 0.51);
+    border-radius: 16px;
+}
+
+@mixin heading{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.25rem;
+}
+@mixin text{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.25rem;
+    margin: 1rem 0 1rem 0;
 }
