--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -5,8 +5,38 @@
     box-sizing: border-box;
 }
 
+header{
+        
+    .mobil{
+
+        img{
+            width: 50px;
+            height: auto;
+            margin: 1.5rem;
+        }
+    }
+
+    .desktop{
+        width: 50px;
+        height: auto;
+        display: none;
+    }
+}
+
 .index{
-    background-color: partial.$bgcolor;
+    @include partial.body;
+
+        section{
+            @include partial.box;
+
+                h1,h2{
+                    font-family: partial.$fontheading;
+                }
+
+                p{
+                    font-family: partial.$fonttxt;
+                }
+        }
 }
 
 
