--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,4 @@
 /*Variables*/
-@font-face {
-  font-family: Arial, Helvetica, sans-serif;
-}
-@font-face {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
 /*Mixins*/
 * {
   margin: 0;
@@ -38,8 +32,11 @@ header .desktop {
   border-radius: 16px;
 }
 .index section h1, .index section h2 {
-  font-family: "Arial";
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.25rem;
 }
 .index section p {
-  font-family: "Verdana";
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.25rem;
+  margin: 1rem 0 1rem 0;
 }/*# sourceMappingURL=style.css.map */
