--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -22,22 +22,26 @@ $link2: #EAC9FF;
     padding: 0.5rem 1rem;
 }
 
-@mixin box ($width:80%, $height:auto) {
+@mixin box ($width:90%, $height:auto, $margin: 3rem auto, $padding:2rem) {
     height:$height;
     width: $width;
-    margin: 3rem auto;
-    padding: 2rem;
+    margin: $margin;
+    padding: $padding;
     color: $white;
-    background: rgba(50, 88, 88, 0.51);
-    border-radius: 16px;
+    border-radius: 3rem;
+    background: rgba($lgreen, 0.80);
+    border: 2px solid rgba($white, 0.50);
+    box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
+    backdrop-filter: blur(7.5px);
 }
 
 @mixin heading{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2.25rem;
+    font-size: 1.75rem;
 }
-@mixin text{
+@mixin text ($line-height:2rem, $margin: 1.5rem 0 1rem 0, $fontsize:1.25rem){
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.25rem;
-    margin: 1rem 0 1rem 0;
+    font-size: $fontsize;
+    margin: $margin;
+    line-height: $line-height;
 }
