--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,37 +6,94 @@
   box-sizing: border-box;
 }
 
-header .mobil img {
-  width: 50px;
+header nav {
   height: auto;
-  margin: 1.5rem;
+  width: 90%;
+  margin: 3rem auto;
+  padding: 2rem;
+  color: #F2F2F2;
+  border-radius: 3rem;
+  background: rgba(50, 88, 88, 0.8);
+  border: 2px solid rgba(242, 242, 242, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
+}
+header .mobil {
+  margin: 1.5rem auto;
+  padding: 1rem 2rem;
+}
+header .mobil img {
+  width: 2.2rem;
+  height: auto;
 }
 header .desktop {
-  width: 50px;
-  height: auto;
   display: none;
 }
 
-.index {
+body {
   background-color: #1F3939;
   background-image: url(img/potegang.svg);
   position: sticky;
 }
-.index section {
+body section {
   height: auto;
-  width: 80%;
+  width: 90%;
   margin: 3rem auto;
   padding: 2rem;
   color: #F2F2F2;
-  background: rgba(50, 88, 88, 0.51);
-  border-radius: 16px;
+  border-radius: 3rem;
+  background: rgba(50, 88, 88, 0.8);
+  border: 2px solid rgba(242, 242, 242, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
 }
-.index section h1, .index section h2 {
+body section h1, body section h2 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2.25rem;
+  font-size: 1.75rem;
 }
-.index section p {
+body section p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.25rem;
-  margin: 1rem 0 1rem 0;
+  margin: 1.5rem 0 1rem 0;
+  line-height: 2rem;
+}
+body section a {
+  text-decoration: none;
+  color: #F2F2F2;
+}
+body footer {
+  height: auto;
+  width: 90%;
+  margin: 3rem auto;
+  padding: 2rem;
+  color: #F2F2F2;
+  border-radius: 3rem;
+  background: rgba(50, 88, 88, 0.8);
+  border: 2px solid rgba(242, 242, 242, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
+  margin: 1.5rem auto;
+  padding: 0.2rem 2rem;
+}
+body footer ul {
+  list-style-type: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.25rem;
+  margin: 1.5rem 0 1rem 0;
+  line-height: 2rem;
+}
+body footer ul li {
+  text-align: center;
+  line-height: 2.5rem;
+}
+body footer ul li a {
+  text-decoration: none;
+  color: #9EF0FF;
+}
+body footer ul li:first-of-type {
+  font-weight: bold;
+  font-size: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
