--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -16,7 +16,6 @@ $link2: #EAC9FF;
 
 @mixin btn {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 1rem 2rem;
     font-size: 1.25rem;
     font-weight: bold;
     background-color: transparent;
@@ -24,8 +23,7 @@ $link2: #EAC9FF;
     border: 2px solid $CTA;
     border-radius: 1.5rem;
     box-shadow: 0px 4px 15px 2px rgba($CTA, 0.50) inset;
-
-
+    padding: 1rem 2rem;
 
         &:hover{
             background-color: $CTA;
@@ -50,10 +48,11 @@ $link2: #EAC9FF;
 @mixin heading{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
+    padding: 1rem 0.5rem 0 0.5rem;
 }
-@mixin text ($line-height:2rem, $margin: 1.5rem 0 1rem 0, $fontsize:1.25rem){
+@mixin text ($line-height:2rem, $fontsize:1.25rem){
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: $fontsize;
-    margin: $margin;
     line-height: $line-height;
+    padding: 1.5rem 0.5rem 0 0.5rem;
 }
