--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,18 +52,25 @@ body section {
 body section h1, body section h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.75rem;
+  padding: 1rem 0.5rem 0 0.5rem;
 }
 body section p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.25rem;
-  margin: 1.5rem 0 1rem 0;
   line-height: 2rem;
+  padding: 1.5rem 0.5rem 0 0.5rem;
+}
+body section p:last-of-type {
+  margin-bottom: 3rem;
+}
+body section a {
+  text-decoration: none;
+  color: #9EF0FF;
 }
 body section .btn {
   text-decoration: none;
   color: #F2F2F2;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 1rem 2rem;
   font-size: 1.25rem;
   font-weight: bold;
   background-color: transparent;
@@ -71,6 +78,7 @@ body section .btn {
   border: 2px solid #FFA54B;
   border-radius: 1.5rem;
   box-shadow: 0px 4px 15px 2px rgba(255, 165, 75, 0.5) inset;
+  padding: 1rem 2rem;
 }
 body section .btn:hover {
   background-color: #FFA54B;
@@ -96,16 +104,12 @@ body footer ul {
   list-style-type: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.25rem;
-  margin: 1.5rem 0 1rem 0;
   line-height: 2rem;
+  padding: 1.5rem 0.5rem 0 0.5rem;
 }
 body footer ul li {
   text-align: center;
   line-height: 2.5rem;
-}
-body footer ul li a {
-  text-decoration: none;
-  color: #9EF0FF;
 }
 body footer ul li:first-of-type {
   font-weight: bold;
