--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -38,7 +38,14 @@ body{
                 p{
                     @include partial.text;
                 }
+                p:last-of-type{
+                    margin-bottom: 3rem;
+                }
 
+                a{
+                    text-decoration: none;
+                    color: partial.$link1;
+                } 
                 .btn{
                     text-decoration: none;
                     color: partial.$white;
@@ -56,10 +63,6 @@ body{
                 li{
                     text-align: center;
                     line-height: 2.5rem;
-                   a{
-                    text-decoration: none;
-                    color: partial.$link1;
-                   } 
                 }
                 li:first-of-type{
                     font-weight: bold;
