--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -10,24 +10,23 @@ $link2: #EAC9FF;
 /*Mixins*/
 @mixin body {
     background-color: $bgcolor;
-    background-image: url(img/potegang.svg);
-    position: sticky;//test om det fungere når indholdet er kommet ind
 }
 
 @mixin btn {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.25rem;
     font-weight: bold;
-    background-color: transparent;
-    color: $CTA;
+    background-color: $CTA;
+    color: $bgcolor;
     border: 2px solid $CTA;
     border-radius: 1.5rem;
     box-shadow: 0px 4px 15px 2px rgba($CTA, 0.50) inset;
     padding: 1rem 2rem;
+    text-align: center;
 
         &:hover{
-            background-color: $CTA;
-            color: $bgcolor;
+            background-color: $bgcolor;
+            color: $CTA;
             transition: ease-in 0.25s;
         }
 }
