--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -13,6 +13,7 @@ header{
     .mobil{
         margin: 1.5rem auto;
         padding: 1rem 2rem;
+
             img{
                 width: 2.2rem;
                 height: auto;
@@ -27,6 +28,9 @@ header{
 
 body{
     @include partial.body;
+    .bg_img{
+        position: fixed;
+    }
 
         section{
             @include partial.box;
