rettet btn til mobil, hover skal måske rettes

--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -16,6 +16,7 @@ $link2: #EAC9FF;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.25rem;
     font-weight: bold;
+    width: auto;
     background-color: $CTA;
     color: $bgcolor;
     border: 2px solid $CTA;
