--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -12,6 +12,18 @@ $link2: #EAC9FF;
     background-color: $bgcolor;
 }
 
+@mixin nav ($width:90%, $height:auto, $margin: 3rem auto, $padding:2rem) {
+    height:$height;
+    width: $width;
+    margin: $margin;
+    padding: $padding;
+    color: $white;
+    border-radius: 3rem;
+    background-color: $lgreen;
+    border: 2px solid rgba($white, 0.50);
+    box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
+}
+
 @mixin btn {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.25rem;
@@ -21,7 +33,6 @@ $link2: #EAC9FF;
     color: $bgcolor;
     border: 2px solid $CTA;
     border-radius: 1.5rem;
-    box-shadow: 0px 4px 15px 2px rgba($CTA, 0.50) inset;
     padding: 1rem 2rem;
     text-align: center;
 
@@ -42,7 +53,7 @@ $link2: #EAC9FF;
     background: rgba($lgreen, 0.80);
     border: 2px solid rgba($white, 0.50);
     box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
-    backdrop-filter: blur(7.5px);
+    backdrop-filter: blur(5px);
 }
 
 @mixin heading{
