--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 header nav {
   height: auto;
   width: 90%;
@@ -13,11 +18,10 @@ header nav {
   padding: 2rem;
   color: #F2F2F2;
   border-radius: 3rem;
-  background: rgba(50, 88, 88, 0.8);
+  background-color: #325858;
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  -webkit-backdrop-filter: blur(7.5px);
-          backdrop-filter: blur(7.5px);
+  height: 4.5rem;
 }
 header .mobil {
   margin: 1.5rem auto;
@@ -55,8 +59,8 @@ body section {
   background: rgba(50, 88, 88, 0.8);
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  -webkit-backdrop-filter: blur(7.5px);
-          backdrop-filter: blur(7.5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 body section h1, body section h2 {
   font-family: Arial, Helvetica, sans-serif;
@@ -83,7 +87,6 @@ body section .btn {
   color: #1F3939;
   border: 2px solid #FFA54B;
   border-radius: 1.5rem;
-  box-shadow: 0px 4px 15px 2px rgba(255, 165, 75, 0.5) inset;
   padding: 1rem 2rem;
   text-align: center;
 }
@@ -102,8 +105,8 @@ body footer {
   background: rgba(50, 88, 88, 0.8);
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  -webkit-backdrop-filter: blur(7.5px);
-          backdrop-filter: blur(7.5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   margin: 1.5rem auto;
   padding: 0.2rem 2rem;
 }
