--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -6,8 +6,12 @@
 }
 
 header{
+    position: sticky;
+    top: 0;
+    z-index: 100;
     nav{
-        @include partial.box;
+        @include partial.nav;
+        height: 4.5rem;
     }
 
     .mobil{
