--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -12,13 +12,11 @@ $link2: #EAC9FF;
     background-color: $bgcolor;
 }
 
-@mixin nav ($width:90%, $height:auto, $margin: 3rem auto, $padding:2rem) {
+@mixin nav_footer ($width:100%, $height:auto, $padding:2rem) {
     height:$height;
     width: $width;
-    margin: $margin;
     padding: $padding;
     color: $white;
-    border-radius: 3rem;
     background-color: $lgreen;
     border: 2px solid rgba($white, 0.50);
     box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
