--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,18 +13,14 @@ header {
 }
 header nav {
   height: auto;
-  width: 90%;
-  margin: 3rem auto;
+  width: 100%;
   padding: 2rem;
   color: #F2F2F2;
-  border-radius: 3rem;
   background-color: #325858;
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  height: 4.5rem;
 }
 header .mobil {
-  margin: 1.5rem auto;
   padding: 1rem 2rem;
 }
 header .mobil img {
@@ -97,17 +93,12 @@ body section .btn:hover {
 }
 body footer {
   height: auto;
-  width: 90%;
-  margin: 3rem auto;
+  width: 100%;
   padding: 2rem;
   color: #F2F2F2;
-  border-radius: 3rem;
-  background: rgba(50, 88, 88, 0.8);
+  background-color: #325858;
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  margin: 1.5rem auto;
   padding: 0.2rem 2rem;
 }
 body footer ul {
