--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*Variables*/
 /*Mixins*/
 * {
@@ -6,6 +7,7 @@
   box-sizing: border-box;
 }
 
+/*Header og nav styling*/
 header {
   position: sticky;
   top: 0;
@@ -31,6 +33,7 @@ header .desktop {
   display: none;
 }
 
+/*Styling for alle tre sider, elementer der gentager sig selv er alle her*/
 body {
   background-color: #1F3939;
 }
@@ -57,6 +60,7 @@ body section {
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  /*Dette er CTA på index*/
 }
 body section h1, body section h2 {
   font-family: Arial, Helvetica, sans-serif;
