--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,8 @@ header nav {
 }
 header .mobil {
   padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
 }
 header .mobil img {
   width: 2.2rem;
