--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -16,7 +16,8 @@ header{
 
     .mobil{
         padding: 1rem 2rem;
-
+        display: flex;
+        justify-content: space-between;
             img{
                 width: 2.2rem;
                 height: auto;
