--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -34,14 +34,14 @@ body{
     @include partial.body;
 
     
-    .bg_img{
-        position: fixed;
-        z-index: -100;
-    }
-    a{
-        text-decoration: none;
-        color: partial.$link1;
-    }
+        .bg_img{
+            position: fixed;
+            z-index: -100;
+        }
+        a{
+            text-decoration: none;
+            color: partial.$link1;
+        }
     
         .intro{
             display: flex;
@@ -87,4 +87,60 @@ body{
     }
 }
 
+/*---------------------Media querry------------------*/
+@media screen and (min-width:700px) and (max-width:1200px) {
+    header{
+        .mobil{
+            img{
+                width: 3rem;
+            }
+        }
+    }
+
+    .intro{
+        
+        .btn{
+            width: 70%;
+            margin: auto;
+        }
+
+    }
+}
+
+@media screen and (min-width: 1201px) {
+    header{
+        .mobil{
+            display: none;
+        }
+        .desktop{
+            display: flex;
+                
+                img{
+                    width: 3.5rem;
+                }
+                ul{
+                    list-style-type: none;
+                    display: flex;
+                    flex-direction: row;
+                    
+                        li{
+                
+                
+                            .visually-hidden{
+                                position: absolute !important;
+                                width: 1px !important;
+                                height: 1px !important;
+                                padding: 0 !important;
+                                margin: -1px !important;
+                                overflow: hidden !important;
+                                clip: rect(0,0,0,0) !important;
+                                white-space: nowrap !important;
+                                border: 0 !important;
+                            }
+                        }
+                            
+                }
+        }
+    }
+}
 
