--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -114,6 +114,8 @@ body{
         }
         .desktop{
             display: flex;
+            padding-right: 5rem;
+            padding-left: 5rem;
                 
                 img{
                     width: 3.5rem;
