--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -120,29 +120,26 @@ body{
                 img{
                     width: 3.5rem;
                 }
-                ul{
-                    list-style-type: none;
-                    display: flex;
-                    flex-direction: row;
-                    
-                        li{
                 
-                
-                            .visually-hidden{
-                                position: absolute !important;
-                                width: 1px !important;
-                                height: 1px !important;
-                                padding: 0 !important;
-                                margin: -1px !important;
-                                overflow: hidden !important;
-                                clip: rect(0,0,0,0) !important;
-                                white-space: nowrap !important;
-                                border: 0 !important;
-                            }
+                div{
+
+                        form{
+                        .visually-hidden{
+                            position: absolute !important;
+                            width: 1px !important;
+                            height: 1px !important;
+                            padding: 0 !important;
+                            margin: -1px !important;
+                            overflow: hidden !important;
+                            clip: rect(0,0,0,0) !important;
+                            white-space: nowrap !important;
+                            border: 0 !important;
                         }
-                            
+                    
+                    }
                 }
         }
     }
 }
+
 
