--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -58,10 +58,12 @@ $link2: #EAC9FF;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
     padding: 1rem 0.5rem 0 0.5rem;
+    color: $white;
 }
 @mixin text ($line-height:2rem, $fontsize:1.25rem){
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: $fontsize;
     line-height: $line-height;
     padding: 1.5rem 0.5rem 0 0.5rem;
+    color: $white;
 }
