--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -166,6 +166,21 @@ body{
                 }
         }
     }
+
+    /*-------------------Main styling----------------------*/
+    main{
+        .intro{
+            
+            .btn{
+                width: 20rem;
+                margin: auto;
+            }
+    
+        }
+        section{
+            width: 70%;
+        }
+    }
 }
 
 
