--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -22,6 +22,7 @@ body{
                 padding: 1rem 2rem;
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
                     img{
                         width: 2.2rem;
                         height: auto;
