--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -27,6 +27,8 @@ body{
                         width: 2.2rem;
                         height: auto;
                     }
+                    
+                }
             }
 
             .desktop{
@@ -83,13 +85,23 @@ body{
                 }
             }
     }
-}
+
 
 /*---------------------Styling af specifikke sektioner------------------*/
 /*---------------------Index------------------*/
 .intro{
     display: flex;
     flex-direction: column;
+
+    img{
+        border-radius: 1.5rem;
+    }
+    .ref{
+        color: partial.$white;
+        font-size: 0.8rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        align-self: center;
+    }
 }
 
 /*-------------------------------Media querry----------------------------------*/
