--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,7 +65,7 @@ section {
           backdrop-filter: blur(5px);
   /*Dette er CTA på index*/
 }
-section h1, section h2 {
+section h1, section h2, section h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.75rem;
   padding: 1rem 0.5rem 0 0.5rem;
