--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -50,7 +50,7 @@ body{
         section{
             @include partial.box;
 
-                h1,h2{
+                h1,h2, h3{
                     @include partial.heading;
                 }
 
